--- a/index.html
+++ b/index.html
@@ -53,27 +53,39 @@
         </div>
     </div>
 
-
+    <div class="email-right">wdiazdev@gmail.com</div>
+    <div class="divider-right-main"></div>
+    <div class="divider-left-main"></div>
+    <div class="main-social">
+        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="#"><i class="fa-brands fa-github"></i></a>
     </div>
 
     <!-- ABOUT SECTION  -->
 
     <div class="about-section" id="about">
         <h2 class="sub-header">About Me</h2>
-        <div class="about-info">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum nostrum rem aperiam rerum architecto
-                cupiditate provident impedit? Minima, suscipit odio nemo quia, dolores iure nostrum, eaque autem
-                deleniti officia corrupti.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim quis, assumenda repudiandae consectetur
-                accusamus quam voluptatibus sequi quaerat est fugiat. Culpa quia debitis tempore odio voluptatum
-                cupiditate dolor ipsum soluta.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, delectus! Fugiat consectetur minima
-                temporibus possimus ipsam atque vel corporis perferendis, iusto doloremque necessitatibus beatae ut nam
-                unde voluptatem rem eos?</p>
+        <div class="about-content">
+            <div class="about-info">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum nostrum rem aperiam rerum architecto
+                    cupiditate provident impedit? Minima, suscipit odio nemo quia, dolores iure nostrum, eaque autem
+                    deleniti officia corrupti.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim quis, assumenda repudiandae
+                    consectetur
+                    accusamus quam voluptatibus sequi quaerat est fugiat. Culpa quia debitis tempore odio voluptatum
+                    cupiditate dolor ipsum soluta.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, delectus! Fugiat consectetur
+                    minima
+                    temporibus possimus ipsam atque vel corporis perferendis, iusto doloremque necessitatibus beatae ut
+                    nam
+                    unde voluptatem rem eos?</p>
+            </div>
+
+            <div class="dev-image">
+                <img src="./assets/myimage.jpg" alt="Developer Image">
+            </div>
         </div>
-        <div class="dev-image">
-            <img src="./assets/myimage.jpg" alt="Developer Image">
-        </div>
+
     </div>
 
     <!-- SKILLS SECTION -->
@@ -176,9 +188,53 @@
                         <img src="./assets/project1.jpg" alt="project 1">
                     </div>
                     <h2>Responsive website</h2>
-                    <p class="carddescr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quos fugiat saepe
+                    <p class="carddescr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quos fugiat
+                        saepe
                         aut, eos error
-                        reprehenderit ducimus necessitatibus animi, qui dignissimos atque fuga, laborum quod. Aliquid
+                        reprehenderit ducimus necessitatibus animi, qui dignissimos atque fuga, laborum quod.
+                        Aliquid
+                        culpa inventore corrupti eveniet.</p>
+                </div>
+                <div class="icon-live">
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a href="#">live</a>
+                </div>
+            </div>
+
+            <!-- CARD 2 -->
+
+            <div class="cards">
+                <div class="cardcontent">
+                    <div class="project-img">
+                        <img src="./assets/project1.jpg" alt="project 1">
+                    </div>
+                    <h2>Responsive website</h2>
+                    <p class="carddescr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quos fugiat
+                        saepe
+                        aut, eos error
+                        reprehenderit ducimus necessitatibus animi, qui dignissimos atque fuga, laborum quod.
+                        Aliquid
+                        culpa inventore corrupti eveniet.</p>
+                </div>
+                <div class="icon-live">
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a href="#">live</a>
+                </div>
+            </div>
+
+            <!-- CARD 3 -->
+
+            <div class="cards">
+                <div class="cardcontent">
+                    <div class="project-img">
+                        <img src="./assets/project1.jpg" alt="project 1">
+                    </div>
+                    <h2>Responsive website</h2>
+                    <p class="carddescr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quos fugiat
+                        saepe
+                        aut, eos error
+                        reprehenderit ducimus necessitatibus animi, qui dignissimos atque fuga, laborum quod.
+                        Aliquid
                         culpa inventore corrupti eveniet.</p>
                 </div>
                 <div class="icon-live">
@@ -187,6 +243,7 @@
                 </div>
             </div>
         </div>
+    </div>
 
     </div>
 
@@ -234,7 +291,7 @@
                 <h5>Designed & Built by Wilfredo Diaz</h5>
                 <div class="footer-social">
                     <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="3"><i class="fa-brands fa-github"></i></a>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
         </div>
