--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
         </div>
     </div>
 
-    <div class="email-right">wdiazdev@gmail.com</div>
-    <div class="divider-right-main"></div>
-    <div class="divider-left-main"></div>
-    <div class="main-social">
-        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="#"><i class="fa-brands fa-github"></i></a>
+    <div class="email-social-main">
+        <div class="email-right">wdiazdev@gmail.com</div>
+        <div class="divider-right-main"></div>
+        <div class="divider-left-main"></div>
+        <div class="main-social">
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="#"><i class="fa-brands fa-github"></i></a>
+        </div>
     </div>
 
     <!-- ABOUT SECTION  -->
@@ -94,81 +96,85 @@
         <div class="skills-info">
             <h2 class="sub-header">My Toolbox</h2>
             <p>Tools and technologies I use to bring your products to life.</p>
+
             <!-- ICONS  -->
-            <ul class="icons">
-                <li>
-                    <div>
-                        <i class="fa-brands fa-html5"></i>
-                        <span>HTML</span>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <i class="fa-brands fa-css3-alt"></i>
-                        <span>CSS3</span>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <i class="fa-brands fa-js"></i>
-                        <span>JavaScript</span>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <i class="fa-brands fa-python"></i>
-                        <span>Python</span>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <i class="fa-brands fa-node-js"></i>
-                        <span>Node.js</span>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <i class="fa-brands fa-git-alt"></i>
-                        <span>Git</span>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <i class="fa-brands fa-github"></i>
-                        <span>GitHub</span>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <i class="fa-brands fa-bootstrap"></i>
-                        <span>Bootstrap</span>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <i class="fa-solid fa-laptop-code"></i>
-                        <span>Responsive Design</span>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <i class="fa-solid fa-terminal"></i>
-                        <span>Command-line</span>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <i class="fa-brands fa-google"></i>
-                        <span>Analytics</span>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <i class="fa-brands fa-figma"></i>
-                        <span>Figma</span>
-                    </div>
-                </li>
-            </ul>
+
+            <div class="icon-container">
+                <ul class="icons">
+                    <li>
+                        <div>
+                            <i class="fa-brands fa-html5"></i>
+                            <span>HTML</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-brands fa-css3-alt"></i>
+                            <span>CSS3</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-brands fa-js"></i>
+                            <span>JavaScript</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-brands fa-python"></i>
+                            <span>Python</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-brands fa-node-js"></i>
+                            <span>Node.js</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-brands fa-git-alt"></i>
+                            <span>Git</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-brands fa-github"></i>
+                            <span>GitHub</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-brands fa-bootstrap"></i>
+                            <span>Bootstrap</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-solid fa-laptop-code"></i>
+                            <span>Responsive Design</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-solid fa-terminal"></i>
+                            <span>Command-line</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-brands fa-google"></i>
+                            <span>Analytics</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-brands fa-figma"></i>
+                            <span>Figma</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 
@@ -176,7 +182,7 @@
 
     <div class="work-section" id="my-work">
         <h2 class="sub-header">My Work</h2>
-        <p>Some Things I’ve Built</p>
+        <p class="para-info">Some Things I’ve Built</p>
 
         <div class="container">
 
@@ -188,7 +194,7 @@
                         <img src="./assets/project1.jpg" alt="project 1">
                     </div>
                     <h2>Responsive website</h2>
-                    <p class="carddescr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quos fugiat
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quos fugiat
                         saepe
                         aut, eos error
                         reprehenderit ducimus necessitatibus animi, qui dignissimos atque fuga, laborum quod.
@@ -209,7 +215,7 @@
                         <img src="./assets/project1.jpg" alt="project 1">
                     </div>
                     <h2>Responsive website</h2>
-                    <p class="carddescr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quos fugiat
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quos fugiat
                         saepe
                         aut, eos error
                         reprehenderit ducimus necessitatibus animi, qui dignissimos atque fuga, laborum quod.
@@ -230,7 +236,7 @@
                         <img src="./assets/project1.jpg" alt="project 1">
                     </div>
                     <h2>Responsive website</h2>
-                    <p class="carddescr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quos fugiat
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quos fugiat
                         saepe
                         aut, eos error
                         reprehenderit ducimus necessitatibus animi, qui dignissimos atque fuga, laborum quod.
@@ -255,33 +261,35 @@
             <p>I am available to work on your projects and bring your ideas to life.</p>
         </div>
         <div class="contact-form">
-            <ul class="contact-icons">
-                <li>
-                    <div>
-                        <i class="fa-solid fa-location-dot"></i>
-                        <span>Tampa, Florida</span>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <i class="fa-solid fa-envelope"></i>
-                        <span>wdiazdev@gmail.com</span>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <i class="fa-solid fa-phone"></i>
-                        <span>407-437-8084</span>
-                    </div>
-                </li>
-            </ul>
-            <form class="form">
-                <input type="text" placeholder="Full Name">
-                <input type="text" placeholder="Email">
-                <input type="text" placeholder="Phone Number">
-                <textarea placeholder="Enter your message!"></textarea>
-                <button class="button">Submit</button>
-            </form>
+            <div class="contact-container">
+                <ul class="contact-icons">
+                    <li>
+                        <div>
+                            <i class="fa-solid fa-location-dot"></i>
+                            <span>Tampa, Florida</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-solid fa-envelope"></i>
+                            <span>wdiazdev@gmail.com</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-solid fa-phone"></i>
+                            <span>407-437-8084</span>
+                        </div>
+                    </li>
+                </ul>
+                <form class="form">
+                    <input type="text" placeholder="Full Name">
+                    <input type="text" placeholder="Email">
+                    <input type="text" placeholder="Phone Number">
+                    <textarea placeholder="Enter your message!"></textarea>
+                    <button class="button">Submit</button>
+                </form>
+            </div>
         </div>
 
         <!-- FOOTER  -->
@@ -295,6 +303,7 @@
                 </div>
             </div>
         </div>
+        <a href="#" id="to-top" class="to-top"><i class="fa-regular fa-chevrons-up"></i></a>
 </body>
 
 </html>
