--- a/index.html
+++ b/index.html
@@ -82,12 +82,10 @@
                     nam
                     unde voluptatem rem eos?</p>
             </div>
-
             <div class="dev-image">
                 <img src="./assets/myimage.jpg" alt="Developer Image">
             </div>
         </div>
-
     </div>
 
     <!-- SKILLS SECTION -->
@@ -304,7 +302,7 @@
                 </div>
             </div>
         </div>
-        <a href="#" id="to-top" class="to-top"><i class="fa-regular fa-chevrons-up"></i></a>
+        <a href="#" id="to-top" class="to-top"><i class="fa-solid fa-angles-up"></i></a>
 </body>
 
 </html>
