--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <div class="divider-right-main"></div>
         <div class="divider-left-main"></div>
         <div class="main-social">
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
+            <a href="www.linkedin.com/in/wdiazdev"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/WDiazDev"><i class="fa-brands fa-github"></i></a>
         </div>
     </div>
 
@@ -102,7 +102,7 @@
                     <li>
                         <div>
                             <i class="fa-brands fa-html5"></i>
-                            <span>HTML</span>
+                            <span>HTML5</span>
                         </div>
                     </li>
                     <li>
@@ -297,20 +297,15 @@
             <div class="footer-content">
                 <h5>Designed & Built by Wilfredo Diaz</h5>
                 <div class="footer-social">
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a href="www.linkedin.com/in/wdiazdev"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/WDiazDev"><i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
         </div>
         <a href="#" id="to-top" class="to-top"><i class="fa-solid fa-angles-up"></i></a>
 
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-        <script>
-            AOS.init({
-                offset: 400,
-                duration: 800
-            });
-        </script>
+        <script>AOS.init({ offset: 400, duration: 800 });</script>
 </body>
 
 </html>
