--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="divider-right-main"></div>
         <div class="divider-left-main"></div>
         <div class="main-social">
-            <a href="www.linkedin.com/in/wdiazdev"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://linkedin.com/in/wdiazdev"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://github.com/WDiazDev"><i class="fa-brands fa-github"></i></a>
         </div>
     </div>
@@ -297,7 +297,7 @@
             <div class="footer-content">
                 <h5>Designed & Built by Wilfredo Diaz</h5>
                 <div class="footer-social">
-                    <a href="www.linkedin.com/in/wdiazdev"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://linkedin.com/in/wdiazdev"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://github.com/WDiazDev"><i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
