--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <div class="divider-right-main"></div>
         <div class="divider-left-main"></div>
         <div class="main-social">
-            <a href="https://linkedin.com/in/wdiazdev"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://github.com/WDiazDev"><i class="fa-brands fa-github"></i></a>
+            <a href="https://linkedin.com/in/wdiazdev" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/WDiazDev" target="_blank"><i class="fa-brands fa-github"></i></a>
         </div>
     </div>
 
@@ -297,8 +297,8 @@
             <div class="footer-content">
                 <h5>Designed & Built by Wilfredo Diaz</h5>
                 <div class="footer-social">
-                    <a href="https://linkedin.com/in/wdiazdev"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://github.com/WDiazDev"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://linkedin.com/in/wdiazdev" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/WDiazDev" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
         </div>
