--- a/index.html
+++ b/index.html
@@ -199,8 +199,9 @@
                         Aliquid
                         culpa inventore corrupti eveniet.</p>
                     <div class="icon-live">
-                        <a href="#"><i class="fa-brands fa-github"></i></a>
-                        <a href="#">live</a>
+                        <a href="https://github.com/wdiazdev/sweat-zone-fitness" target="_blank"><i
+                                class="fa-brands fa-github"></i></a>
+                        <a href="https://wdiazdev.github.io/sweat-zone-fitness" target="_blank">live</a>
                     </div>
                 </div>
             </div>
@@ -210,7 +211,7 @@
             <div class="cards">
                 <div class="cardcontent">
                     <div class="project-img">
-                        <img src="./assets/project1.jpg" alt="project 1">
+                        <img src="./assets/project2.png" alt="project 1">
                     </div>
                     <h2>Responsive website</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quos fugiat
@@ -220,8 +221,9 @@
                         Aliquid
                         culpa inventore corrupti eveniet.</p>
                     <div class="icon-live">
-                        <a href="#"><i class="fa-brands fa-github"></i></a>
-                        <a href="#">live</a>
+                        <a href="https://github.com/wdiazdev/movie-app" target="_blank"><i
+                                class="fa-brands fa-github"></i></a>
+                        <a href="https://wdiazdev.github.io/movie-app" target="_blank">live</a>
                     </div>
                 </div>
             </div>
@@ -303,7 +305,6 @@
             </div>
         </div>
         <a href="#" id="to-top" class="to-top"><i class="fa-solid fa-angles-up"></i></a>
-
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>AOS.init({ offset: 400, duration: 800 });</script>
 </body>
