--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="./assets/meta-icon.png" />
     <link rel="stylesheet" href="styles.css">
     <script src="app.js" defer></script>
     <link rel="stylesheet" href="./assets/fontawsome/css/all.min.css">
@@ -283,12 +284,13 @@
                         </div>
                     </li>
                 </ul>
-                <form class="form" action="https://formsubmit.co/wdiazdev@gmail.com" method="POST">
-                    <input type="text" name="name" placeholder="Full Name" required>
-                    <input type="email" name="email" placeholder="Email Address" required>
-                    <input type="text" placeholder="Phone Number | Optional">
-                    <textarea placeholder="Enter your message!" required></textarea>
+                <form class="form" action="https://formsubmit.co/9167cdec8a6bfa87f452dab0846737d6" method="POST">
                     <input type="hidden" name="_subject" value="New message from www.wdiazdev.com">
+                    <input type="text" name="Name" placeholder="Full Name" required>
+                    <input type="email" name="Email" placeholder="Email Address" required>
+                    <input type="text" name="Phone Number" placeholder="Phone Number | Optional">
+                    <input type="text" class="message-box" name="Message" placeholder="Enter your message!"
+                        required></input>
                     <button type="submit" class="button">Submit</button>
                 </form>
             </div>
