--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     unde voluptatem rem eos?</p>
             </div>
             <div class="dev-image" data-aos="zoom-in">
-                <img src="./assets/myimage.jpg" alt="Developer Image">
+                <img src="./assets/Avatar.png" alt="developer image">
             </div>
         </div>
     </div>
@@ -192,13 +192,11 @@
                     <div class="project-img">
                         <img src="./assets/project1.jpg" alt="project 1">
                     </div>
-                    <h2>Responsive website</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quos fugiat
-                        saepe
-                        aut, eos error
-                        reprehenderit ducimus necessitatibus animi, qui dignissimos atque fuga, laborum quod.
-                        Aliquid
-                        culpa inventore corrupti eveniet.</p>
+                    <h2>Responsive Design</h2>
+                    <p> Sweat Zone: Almost every new client these days wants a mobile version of their website.
+                        Sweat Zone is a fully responsive website with a simple user interface and great navigation
+                        experience. You are welcome to visit!
+                    </p>
                     <div class="icon-live">
                         <a href="https://github.com/wdiazdev/sweat-zone-fitness" target="_blank"><i
                                 class="fa-brands fa-github"></i></a>
@@ -212,15 +210,14 @@
             <div class="cards">
                 <div class="cardcontent">
                     <div class="project-img">
-                        <img src="./assets/project2.png" alt="project 1">
+                        <img src="./assets/project2.jpg" alt="project 1">
                     </div>
-                    <h2>Responsive website</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quos fugiat
-                        saepe
-                        aut, eos error
-                        reprehenderit ducimus necessitatibus animi, qui dignissimos atque fuga, laborum quod.
-                        Aliquid
-                        culpa inventore corrupti eveniet.</p>
+                    <h2>API Integration</h2>
+                    <p> Movie Zone: API integration implemented to allow users to query their favorite movies overview,
+                        release date and average rating. The application provide data about the 20 most popular movies
+                        in real time. Get some popcorn and try it!!!
+
+                    </p>
                     <div class="icon-live">
                         <a href="https://github.com/wdiazdev/movie-app" target="_blank"><i
                                 class="fa-brands fa-github"></i></a>
