--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                     </li>
                     <li>
                         <div>
-                            <i class="fa-solid fa-laptop-code"></i>
-                            <span>Responsive Design</span>
+                            <i class="fa-brands fa-react"></i>
+                            <span>React</span>
                         </div>
                     </li>
                     <li>
