--- a/index.html
+++ b/index.html
@@ -151,7 +151,13 @@
                     <li>
                         <div>
                             <i class="fa-brands fa-react"></i>
-                            <span>React</span>
+                            <span>React.js</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-solid fa-server"></i>
+                            <span>Express.js</span>
                         </div>
                     </li>
                     <li>
@@ -170,6 +176,12 @@
                         <div>
                             <i class="fa-brands fa-figma"></i>
                             <span>Figma</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-solid fa-laptop-code"></i>
+                            <span>UI/UX</span>
                         </div>
                     </li>
                 </ul>
