--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+    <!-- NAVBAR  -->
+
     <section class="top-nav" data-aos="slide-down">
         <div class="logo-name">
             <p>UI/UX</p>
