--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
             <h1>Wilfredo Diaz.</h1>
             <p>I am a Front-End Software Engineer based in Tampa Florida.</p>
             <p>I'm passionate about turning ideas into real life products.</p>
-            <button class="button">Resume</button>
         </div>
 
         <!-- Welcome-to use to hide Div on scroll -->
@@ -72,18 +71,15 @@
         <h2 class="sub-header" data-aos="fade-right">About Me</h2>
         <div class="about-content">
             <div class="about-info" data-aos="slide-up">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum nostrum rem aperiam rerum architecto
-                    cupiditate provident impedit? Minima, suscipit odio nemo quia, dolores iure nostrum, eaque autem
-                    deleniti officia corrupti.</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim quis, assumenda repudiandae
-                    consectetur
-                    accusamus quam voluptatibus sequi quaerat est fugiat. Culpa quia debitis tempore odio voluptatum
-                    cupiditate dolor ipsum soluta.</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, delectus! Fugiat consectetur
-                    minima
-                    temporibus possimus ipsam atque vel corporis perferendis, iusto doloremque necessitatibus beatae ut
-                    nam
-                    unde voluptatem rem eos?</p>
+                <p>Hi, my name is <span>Wilfredo Diaz</span>. My interest in web development started back in 2020 when
+                    I discovered my passion for technology from software engineering to <span>UI/UX</span>. I decided to
+                    learn Python as my first programming language and managed to continue to learn other
+                    languages, frameworks and libraries.</p>
+
+                <p>My focus these days is building responsive websites easy to use and built with the best practices.
+                    My main area of expertise is frontend development. I spend my free time on travel
+                    adventures, health and fitness and learning new technologies.</p>
+
             </div>
             <div class="dev-image" data-aos="zoom-in">
                 <img src="./assets/Avatar.png" alt="developer image">
@@ -245,18 +241,15 @@
             <div class="cards">
                 <div class="cardcontent">
                     <div class="project-img">
-                        <img src="./assets/project1.jpg" alt="project 1">
+                        <img src="./assets/furiouscar.jpg" alt="project 1">
                     </div>
-                    <h2>Responsive website</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quos fugiat
-                        saepe
-                        aut, eos error
-                        reprehenderit ducimus necessitatibus animi, qui dignissimos atque fuga, laborum quod.
-                        Aliquid
-                        culpa inventore corrupti eveniet.</p>
+                    <h2>Car Game - Python GUI</h2>
+                    <p>Furious is a car game built with Python and Pygame module. The app required
+                        integers, lists, tuples, while loops, for loops and if statements to deliver better
+                        user experience.</p>
                     <div class="icon-live">
-                        <a href="#"><i class="fa-brands fa-github"></i></a>
-                        <a href="#">live</a>
+                        <a href="https://github.com/wdiazdev/python-car-game-pygame" target="_blank"><i
+                                class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
             </div>
