--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <div class="cards">
                 <div class="cardcontent">
                     <div class="project-img">
-                        <img src="./assets/project2.jpg" alt="project 1">
+                        <img src="./assets/project2.jpg" alt="project 2">
                     </div>
                     <h2>API Integration</h2>
                     <p> Movie Zone: API integration implemented to allow users to query their favorite movies overview,
@@ -241,7 +241,8 @@
             <div class="cards">
                 <div class="cardcontent">
                     <div class="project-img">
-                        <img src="./assets/furiouscar.jpg" alt="project 1">
+                        <video class="project--video" src="./assets/Furious Car Game video.mp4"
+                            poster="./assets/furiouscar.jpg" controls muted></video>
                     </div>
                     <h2>Car Game - Python GUI</h2>
                     <p>Furious is a car game built with Python and Pygame module. The app required
