--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
                     learn Python as my first programming language and managed to continue to learn other
                     languages, frameworks and libraries.</p>
 
+                <p>My goal is to remain on the cutting-edge of advancements.
+                    I have enhanced my <span>communication</span> abilities and cultivated a
+                    reputation as a major contributor through <span>problem-solving</span> and <span>teamwork</span>.
+                </p>
+
                 <p>My focus these days is building responsive websites easy to use and built with the best practices.
                     My main area of expertise is frontend development. I spend my free time on travel
                     adventures, health and fitness and learning new technologies.</p>
