--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="dev-info" data-aos="fade-right">
             <h3>Hi there, I'm</h3>
             <h1>Wilfredo Diaz.</h1>
-            <p>I am a Front-End Software Engineer based in Tampa Florida.</p>
+            <p>I am a Front-End Software Developer based in Tampa Florida.</p>
             <p>I'm passionate about turning ideas into real life products.</p>
         </div>
 
