--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="dev-info" data-aos="fade-right">
             <h3>Hi there, I'm</h3>
             <h1>Wilfredo Diaz.</h1>
-            <p>I am a Front-End Software Developer based in Tampa Florida.</p>
+            <p>I am a Front-End Software Engineer based in Tampa Florida.</p>
             <p>I'm passionate about turning ideas into real life products.</p>
         </div>
 
@@ -205,17 +205,17 @@
             <div class="cards">
                 <div class="cardcontent">
                     <div class="project-img">
-                        <img src="./assets/project1.jpg" alt="project 1">
+                        <img src="./assets/cryptooracle.png" alt="project 1">
                     </div>
-                    <h2>Responsive Design</h2>
-                    <p> Sweat Zone: Almost every new client these days wants a mobile version of their website.
-                        Sweat Zone is a fully responsive website with a simple user interface and great navigation
-                        experience. You are welcome to visit!
+                    <h2>React - Crypto-Oracle</h2>
+                    <p> CryptoOracle is a website for live crypto prices listing using real-time data feeds.
+                        CryptoOracle displays rank, current price, market cap and circulating supply for the top 100
+                        crypto projects. Search for your favorite coins!!
                     </p>
                     <div class="icon-live">
-                        <a href="https://github.com/wdiazdev/sweat-zone-fitness" target="_blank"><i
+                        <a href="https://github.com/wdiazdev/CryptoOracle" target="_blank"><i
                                 class="fa-brands fa-github"></i></a>
-                        <a href="https://wdiazdev.github.io/sweat-zone-fitness" target="_blank">live</a>
+                        <a href="https://wdiazdev.github.io/CryptoOracle/" target="_blank">live</a>
                     </div>
                 </div>
             </div>
@@ -225,12 +225,32 @@
             <div class="cards">
                 <div class="cardcontent">
                     <div class="project-img">
+                        <img src="./assets/project1.jpg" alt="project 1">
+                    </div>
+                    <h2>Responsive Design</h2>
+                    <p> Sweat Zone: Almost every new client these days wants a mobile version of their website.
+                        Sweat Zone is a fully responsive website with a simple user interface and great navigation
+                        experience. You are welcome to visit!!
+                    </p>
+                    <div class="icon-live">
+                        <a href="https://github.com/wdiazdev/sweat-zone-fitness" target="_blank"><i
+                                class="fa-brands fa-github"></i></a>
+                        <a href="https://wdiazdev.github.io/sweat-zone-fitness" target="_blank">live</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- CARD 3 -->
+
+            <div class="cards">
+                <div class="cardcontent">
+                    <div class="project-img">
                         <img src="./assets/project2.jpg" alt="project 2">
                     </div>
                     <h2>API Integration</h2>
                     <p> Movie Zone: API integration implemented to allow users to query their favorite movies overview,
                         release date and average rating. The application provide data about the 20 most popular movies
-                        in real time. Get some popcorn and try it!!!
+                        in real time. Get some popcorn and try it!!
 
                     </p>
                     <div class="icon-live">
@@ -241,7 +261,7 @@
                 </div>
             </div>
 
-            <!-- CARD 3 -->
+            <!-- CARD 4 -->
 
             <div class="cards">
                 <div class="cardcontent">
@@ -259,7 +279,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 
