--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <p>I'm passionate about turning ideas into real life products.</p>
         </div>
 
+
         <!-- Welcome-to use to hide Div on scroll -->
         <div class="welcome-to" id="welcome-to">
             <i class="fa-solid fa-angles-down bounce"></i>
@@ -77,7 +78,7 @@
                     languages, frameworks and libraries.</p>
 
                 <p>My goal is to remain on the cutting-edge of advancements.
-                    I have enhanced my <span>communication</span> abilities and cultivated a
+                    I have enhanced my <span>technical</span> abilities and cultivated a
                     reputation as a major contributor through <span>problem-solving</span> and <span>teamwork</span>.
                 </p>
 
@@ -87,7 +88,7 @@
 
             </div>
             <div class="dev-image" data-aos="zoom-in">
-                <img src="./assets/Avatar.png" alt="developer image">
+                <img src="./assets/myimage.jpg" alt="developer image">
             </div>
         </div>
     </div>
@@ -195,9 +196,10 @@
     <!-- WORK SECTION  -->
 
     <div class="work-section" id="my-work">
-        <h2 class="sub-header" data-aos="fade-right">My Work</h2>
-        <p class="para-info" data-aos="fade-right">Some Things I’ve Built</p>
-
+        <div data-aos="fade-right">
+            <h2 class="sub-header">My Work</h2>
+            <p id="work-section-p">Some Things I’ve Built</p>
+        </div>
         <div class="container" data-aos="zoom-out-up">
 
             <!-- CARD 1 -->
