--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <div class="work-section" id="my-work">
         <div data-aos="fade-right">
             <h2 class="sub-header">My Work</h2>
-            <p id="work-section-p">Some Things I’ve Built</p>
+            <p id="work-section-subheader">Some Things I’ve Built</p>
         </div>
         <div class="container" data-aos="zoom-out-up">
 
