--- a/index.html
+++ b/index.html
@@ -72,19 +72,23 @@
         <h2 class="sub-header" data-aos="fade-right">About Me</h2>
         <div class="about-content">
             <div class="about-info" data-aos="slide-up">
-                <p>Hi, my name is <span>Wilfredo Diaz</span>. My interest in web development started back in 2020 when
-                    I discovered my passion for technology from software engineering to <span>UI/UX</span>. I decided to
-                    learn Python as my first programming language and managed to continue to learn other
-                    languages, frameworks and libraries.</p>
+                <p>Hi, my name is <span>Wilfredo Diaz</span>. My interest in web
+                    development started back in 2020 when I discovered my passion
+                    for technology, from software engineering to UI/UX. I decided to
+                    learn Python as my first programming language and managed to
+                    continue to learn other languages, frameworks, and libraries.</p>
 
-                <p>My goal is to remain on the cutting-edge of advancements.
+                <p>My goal is to stay on the cutting edge of technological advancements.
                     I have enhanced my <span>technical</span> abilities and cultivated a
-                    reputation as a major contributor through <span>problem-solving</span> and <span>teamwork</span>.
+                    reputation as a major contributor through <span>problem-solving</span>
+                    and <span>teamwork</span>.
                 </p>
 
-                <p>My focus these days is building responsive websites easy to use and built with the best practices.
-                    My main area of expertise is frontend development. I spend my free time on travel
-                    adventures, health and fitness and learning new technologies.</p>
+                <p>My focus these days is building responsive websites that are easy
+                    to use and built with best
+                    practices. My main area of expertise is front-end development.
+                    I spend my free time on travel
+                    adventures, health and fitness, and learning about new technologies.</p>
 
             </div>
             <div class="dev-image" data-aos="zoom-in">
@@ -186,6 +190,18 @@
                         <div>
                             <i class="fa-solid fa-laptop-code"></i>
                             <span>UI/UX</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-brands fa-sass"></i>
+                            <span>SASS</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-brands fa-google"></i>
+                            <span>Firebase</span>
                         </div>
                     </li>
                 </ul>
