--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h3>Hi there, I'm</h3>
             <h1>Wilfredo Diaz.</h1>
             <p>I am a Front-End Software Developer based in Tampa Florida.</p>
-            <p>I'm passionate about turning ideas into real life products.</p>
+            <p>I'm passionate about turning ideas into real-life products.</p>
         </div>
 
 
